# simple-atm

./: .gitignore  CMakeLists.txt  README.md
include/atm/: ATMController.h  Exceptions.h  Ports.h
src/: ATMController.cpp
tests/: Fakes.h  test_controller.cpp
